log
Sat, May  3, 2025  9:05:43 PM: 
 treemap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
5729e4d
Sat, May  3, 2025  9:10:04 PM: 
 treemap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:62:15: error: unused variable 'parent' [-Werror=unused-variable]
     TreeNode* parent = NULL;
               ^~~~~~
treemap.c:61:15: error: unused variable 'node' [-Werror=unused-variable]
     TreeNode* node = tree->root;
               ^~~~
cc1.exe: all warnings being treated as errors
10132f4
Sat, May  3, 2025  9:10:47 PM: 
 treemap.c | 3 +++
 1 file changed, 3 insertions(+)
Compilation failed
test.c: In function 'insertTreeMap':
test.c:503:5: error: 'main' is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
 }
 ^
In file included from test.c:4:0:
treemap.c:62:15: error: variable 'parent' set but not used [-Werror=unused-but-set-variable]
     TreeNode* parent = NULL;
               ^~~~~~
At top level:
test.c:503:5: error: 'main' defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
cc1.exe: all warnings being treated as errors
9c996bb
Sat, May  3, 2025  9:11:37 PM: 
 treemap.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  4|7
total_score: 5/70
59bc00e
Sat, May  3, 2025  9:12:32 PM: 
 treemap.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  6|6
total_score: 15/70
3464b64
Sat, May  3, 2025  9:13:25 PM: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|6
total_score: 15/70
3f5f410
Sat, May  3, 2025  9:13:48 PM: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  8|5
total_score: 15/70
5730c50
Sat, May  3, 2025  9:15:56 PM: 
 treemap.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
 tests:  8|5
total_score: 15/70
aa0b856
